# Zomato-AI-Recommender-streamlit

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
docs/: dataset-contract.md  deployment-plan.md  edge-cases.md  phase0-scope.md  phased-architecture backup.md  phased-architecture.md  phased-architecture_2.md  problemstatement.md  streamlit-deploy.md  voice-input-plan.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: EmptyState.jsx  PreferenceForm.jsx  RecommendationList.jsx  RestaurantCard.jsx
frontend/src/services/: api.js
src/: output2.json
src/phase0/: __init__.py  cli.py
src/phase1/ingestion/: __init__.py  loader.py  models.py  normalization.py  schema.py
src/phase2/preferences/: __init__.py  service.py  types.py
src/phase3/integration/: __init__.py  pipeline.py  prompt.py  retrieval.py
src/phase4/llm/: __init__.py  client.py  engine.py  fallback.py  parser.py
src/phase5/output/: __init__.py  render.py  telemetry.py
src/phase6/: __init__.py
src/phase6/api/: __init__.py  main.py  schemas.py  service.py
src/phase6/api/routers/: health.py  metadata.py  recommendations.py
src/phase8/: __init__.py  app.py
tests/phase0/: test_cli_diagnostics.py
tests/phase1/: test_loader.py  test_normalization.py  test_schema.py
tests/phase2/: test_preferences.py
tests/phase3/: test_integration.py
tests/phase4/: test_llm.py
tests/phase5/: test_output.py
tests/phase6/: test_api.py
