[project]
name = "zomato-usecase"
version = "0.1.0"
description = "Phase-wise implementation of an AI-powered restaurant recommendation system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "groq",
    "fastapi",
    "uvicorn",
    "python-dotenv",
]

[project.scripts]
milestone1 = "phase0.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
